2008-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (IntegralRotateImage): Accelerate rotation by 0
	and 180 degrees using OpenMP.
	(XShearImage): Accellerate using OpenMP (accellerates -rotate and
	-shear).
	(YShearImage): Accellerate using OpenMP (accellerates -rotate and
	-shear).

2008-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (MotionBlurImage): Enable OpenMP now that pixel
	cache is re-entrant.
	* magick/pixel_iterator.c: Updated to use thread view convenience
	inline methods as proof of principle.
	* magick/pixel_cache.h: Added convenience inline methods to make
	use of thread views a bit more pleasant.

2008-09-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ShadeImage): Fix valgrind gripe.
	(MedianFilterImage): Fix valgrind gripe.

2008-09-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c: Pixel cache is believed to be thread safe
	now.
	* magick/deprecate.c (AcquireCacheView): Deprecate this function.
	(GetCacheView): Deprecate this function.
	(SetCacheView): Deprecate this function.
	(SyncCacheView): Deprecate this function.
	* magick/pixel_cache.c (AcquireCacheViewPixels): New function to
	replace AcquireCacheView().
	(GetCacheViewPixels): New function to replace GetCacheView().
	(SetCacheViewPixels): New function to replace SetCacheView().
	(SyncCacheViewPixels): New function to replace SyncCacheView().
	* coders/msl.c: Applied patches from Max at hohenegger.eu which
	fix a MSL parsing error related to gamma, and erroneous text
	comments which claim that elements can't have attributes.

2008-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (ResizeImage): Move OpenMP instrumentation to
	outer loop so that eventually there can be more performance.

2008-09-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (MinifyImage): Accelerate using OpenMP.