@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2008-09-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> doc/conjure.imdoc: Applied patches from Max at hohenegger.eu to
+        mention previously undocumented elements and to provide a
+        composition example.
+
+</UL>
+<p>
 2008-09-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
